<resources>
    <string name="app_name">ZhaMod</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="setting">设置</string>
    <string name="theme_title">更换主题色</string>
    <string name="theme_summary">更换 titlebar 颜色</string>
    <string name="about">关于</string>
    <string name="settings_version">应用版本</string>
    <string name="settings_github">GitHub 开源项目</string>
    <string name="settings_weibo">新浪微博</string>
    <string name="email">电子邮箱</string>
    <string name="statement_summary">本模块仅用于研究学习目的，不以任何形式盈利。对于在使用过程中可能产生的不良影响，需由用户自行承担。本项目为开源项目，基于本项目代码派生出的修改插件与作者无关。</string>
    <string name="statement_title">声明</string>
    <string name="theme_current_select">当前选择颜色：</string>
</resources>
