<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="setting" android:title="@string/setting">

        <Preference
            android:key="theme"
            android:title="@string/theme_title"
            android:summary="@string/theme_summary" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="about" android:title="@string/about">

        <Preference
            android:key="version"
            android:title="@string/settings_version" />

        <Preference
            android:key="github"
            android:title="@string/settings_github" />

        <Preference
            android:key="weibo"
            android:title="@string/settings_weibo" />

        <Preference
            android:key="email"
            android:title="@string/email" />

        <Preference
            android:key="statement"
            android:title="@string/statement_title"
            android:summary="@string/statement_summary"/>
    </PreferenceCategory>
</PreferenceScreen>